# juzo-cm

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
crates/juzo/: Cargo.toml
crates/juzo/src/: main.rs
crates/juzo/src/handlers/: mod.rs
crates/juzo/src/handlers/callback/: mod.rs  test.rs
crates/juzo/src/handlers/chat_member/: mod.rs
crates/juzo/src/handlers/chat_member/bot/: admin.rs
crates/juzo/src/handlers/managed_bot/: managed.rs  mod.rs
crates/juzo/src/handlers/message/: mod.rs
crates/juzo/src/handlers/message/agent/: agent.rs  bans_user.rs  chat_domen.rs  ignore.rs  managed_bot.rs  mod.rs  scam.rs  spam.rs
crates/juzo/src/handlers/message/moderator/: chat_bag.rs  chat_description.rs  chat_name.rs  creator.rs  message.rs  mod.rs  module_access.rs  pin.rs  reason.rs  tag.rs  tg_admin.rs  topic_close.rs  topic_name.rs  topic_reopen.rs
crates/juzo/src/handlers/message/service/: creator_left.rs  managed_bot_created.rs  mod.rs
crates/juzo/src/handlers/message/user/: anketa.rs  bag.rs  buying.rs  cheak.rs  convey.rs  cube.rs  description.rs  mod.rs  price.rs  start.rs  test.rs  user_id.rs
