[workspace]
members = [
    "crates/juzo-macros",
    "crates/juzo-core",
    "crates/juzo",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[patch.crates-io]
juzo-core = { path = "crates/juzo-core" }
juzo-macros = { path = "crates/juzo-macros" }

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
telers = { git = "https://github.com/Desiders/telers", features = ["full"] }

# БД.
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-rust_decimal",
    "with-chrono",
] }

# Математика.
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"

# Время.
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"

# Работа с данными и сериализация.
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
derive_more = { version = "2.1.0", features = ["full"] }

