[workspace]
members = [
    "crates/juzo-macros",
    "crates/juzo-core",
    "crates/juzo",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[patch.crates-io]
juzo-core = { path = "crates/juzo-core" }
juzo-macros = { path = "crates/juzo-macros" }

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
telers = { git = "https://github.com/Desiders/telers", features = ["full"] }

# БД.
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-rust_decimal",
    "with-chrono",
] }

# Математика.
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"

